feat: add Oregon Redwoods pics

--- a/resources/lat_lng_geopy.ipynb
+++ b/resources/lat_lng_geopy.ipynb
@@ -138,7 +138,8 @@
      "text": [
       "Lovina, Bali, Indonesia: -8.16305115, 115.02246398708351\n",
       "Uluwatu, Bali, Indonesia: -8.8272855, 115.0889841\n",
-      "Mall, Washington, DC: 39.626185, -77.7691954\n"
+      "Mall, Washington, DC: 39.626185, -77.7691954\n",
+      "Klamath River Overlook, California: 41.5543991, -124.0866197\n"
      ]
     }
    ],
@@ -148,6 +149,7 @@
     "    \"Lovina, Bali, Indonesia\",\n",
     "    \"Uluwatu, Bali, Indonesia\",\n",
     "    \"Mall, Washington, DC\",\n",
+    "    \"Klamath River Overlook, California\",\n",
     "]\n",
     "\n",
     "for location in locations:\n",
