fix: adjust Rally to Restore Sanity lat/lng

--- a/resources/lat_lng_geopy.ipynb
+++ b/resources/lat_lng_geopy.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,6 @@
     "    \"Uluwatu, Bali, Indonesia\",\n",
     "    \"Mall, Washington, DC\",\n",
     "    \"Klamath River Overlook, California\",\n",
-    "    \"Plaza de Armas, Puno, Peru\",\n",
     "    \"Ollantaytambo, Peru\",\n",
     "    \"Cusco, Peru\",\n",
     "]\n",
@@ -165,14 +164,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Alto Puno, Peru: -15.8115351, -70.0322977\n"
+      "Alto Puno, Peru: -15.8115351, -70.0322977\n",
+      "National Mall, Washington, DC: 38.8854281, -77.0414734922376\n",
+      "Botanical Gardens, Washington, DC: 38.8876844, -77.0201326\n",
+      "Washington Monument, Washington, DC: 38.889483049999996, -77.03525005547871\n"
      ]
     }
    ],
@@ -180,6 +182,9 @@
     "geolocator = Nominatim(user_agent=\"geoapi\")\n",
     "locations = [\n",
     "    \"Alto Puno, Peru\",\n",
+    "    \"National Mall, Washington, DC\",\n",
+    "    \"Botanical Gardens, Washington, DC\",\n",
+    "    \"Washington Monument, Washington, DC\",\n",
     "]\n",
     "\n",
     "for location in locations:\n",
