feat: add STJ pics

--- a/resources/lat_lng_geopy.ipynb
+++ b/resources/lat_lng_geopy.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,8 @@
       "Alto Puno, Peru: -15.8115351, -70.0322977\n",
       "National Mall, Washington, DC: 38.8854281, -77.0414734922376\n",
       "Botanical Gardens, Washington, DC: 38.8876844, -77.0201326\n",
-      "Washington Monument, Washington, DC: 38.889483049999996, -77.03525005547871\n"
+      "Washington Monument, Washington, DC: 38.889483049999996, -77.03525005547871\n",
+      "St. John, US Virgin Islands: 18.335601349999997, -64.75504062120726\n"
      ]
     }
    ],
@@ -185,6 +186,7 @@
     "    \"National Mall, Washington, DC\",\n",
     "    \"Botanical Gardens, Washington, DC\",\n",
     "    \"Washington Monument, Washington, DC\",\n",
+    "    \"St. John, US Virgin Islands\",\n",
     "]\n",
     "\n",
     "for location in locations:\n",
