feat: add activity overlay

--- a/resources/extract_data.ipynb
+++ b/resources/extract_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,18 +208,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Geocoding Los Arbolitos, Municipio de Los Cabos, Baja California Sur, México...\n",
-      "Geocoding Cabo Pulmo, Mexico...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# geocode locations\n",
     "geolocator = Nominatim(user_agent=\"geoapi\", timeout=10)\n",
@@ -271,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -292,30 +283,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\johbr\\AppData\\Local\\Temp\\ipykernel_29164\\358499800.py:16: DeprecationWarning: The order of arguments in worksheet.update() has changed. Please pass values first and range_name secondor used named arguments (range_name=, values=)\n",
-      "  location_sheet.update('A1', location_data_list)  # upload new data\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Data successfully uploaded to Google Sheets!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\johbr\\AppData\\Local\\Temp\\ipykernel_29164\\358499800.py:24: DeprecationWarning: The order of arguments in worksheet.update() has changed. Please pass values first and range_name secondor used named arguments (range_name=, values=)\n",
-      "  activity_sheet.update('A1', activity_data_list)  # upload new data\n"
      ]
     }
    ],
@@ -335,7 +310,7 @@
     "location_sheet = spreadsheet.worksheet(\"Location\")\n",
     "try:\n",
     "    location_sheet.clear()  # clear existing data\n",
-    "    location_sheet.update('A1', location_data_list)  # upload new data\n",
+    "    location_sheet.update(values=location_data_list, range_name='A1')  # upload new data\n",
     "except Exception as e:\n",
     "    print(f\"Error updating Location sheet: {e}\")\n",
     "\n",
@@ -343,7 +318,7 @@
     "activity_sheet = spreadsheet.worksheet(\"Activity\")\n",
     "try:\n",
     "    activity_sheet.clear()  # clear existing data\n",
-    "    activity_sheet.update('A1', activity_data_list)  # upload new data\n",
+    "    activity_sheet.update(values=activity_data_list, range_name='A1')  # upload new data\n",
     "except Exception as e:\n",
     "    print(f\"Error updating Activity sheet: {e}\")\n",
     "\n",
@@ -352,45 +327,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "beach: 23.4045736, -109.42544579648788 - Los Arbolitos, Municipio de Los Cabos, Baja California Sur, México\n",
-      "bay: Location not found\n",
-      "park: Location not found\n",
-      "trail: Location not found\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# # bounding box for St. John, USVI\n",
-    "# viewbox = [[18.3839, -64.7922], [18.3080, -64.6823]]\n",
+    "# # # bounding box for St. John, USVI\n",
+    "# # viewbox = [[18.3839, -64.7922], [18.3080, -64.6823]]\n",
     "\n",
-    "# # bounding box for Anegada, British Virgin Islands\n",
-    "# viewbox = [[18.7666, -64.4050], [18.6833, -64.2694]]\n",
+    "# # # bounding box for Anegada, British Virgin Islands\n",
+    "# # viewbox = [[18.7666, -64.4050], [18.6833, -64.2694]]\n",
     "\n",
-    "# Bounding box for Cabo Pulmo, Mexico\n",
-    "viewbox = [[23.4700, -109.4500], [23.4000, -109.3500]]\n",
+    "# # Bounding box for Cabo Pulmo, Mexico\n",
+    "# viewbox = [[23.4700, -109.4500], [23.4000, -109.3500]]\n",
     "\n",
-    "# example queries\n",
-    "queries = [\"beach\", \"bay\", \"park\", \"trail\"]\n",
+    "# # example queries\n",
+    "# queries = [\"beach\", \"bay\", \"park\", \"trail\"]\n",
     "\n",
-    "# geocode each query within the bounding box\n",
-    "for query in queries:\n",
-    "    location = geolocator.geocode(query, viewbox=viewbox, bounded=True)\n",
-    "    if location:\n",
-    "        print(f\"{query}: {location.latitude}, {location.longitude} - {location.address}\")\n",
-    "    else:\n",
-    "        print(f\"{query}: Location not found\")"
+    "# # geocode each query within the bounding box\n",
+    "# for query in queries:\n",
+    "#     location = geolocator.geocode(query, viewbox=viewbox, bounded=True)\n",
+    "#     if location:\n",
+    "#         print(f\"{query}: {location.latitude}, {location.longitude} - {location.address}\")\n",
+    "#     else:\n",
+    "#         print(f\"{query}: Location not found\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
